force-app/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <description>To store the employment history of individuals</description>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>Employment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>