force-app/main/default/objects/Employment_History__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment Histories (Company)</relationshipLabel>
    <relationshipName>Employment_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>