force-app/main/default/objects/Employment_History__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the account related to the employment history</description>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can choose only contact of type Person Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment Histories</relationshipLabel>
    <relationshipName>Employment_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>