force-app/main/default/objects/Employment_History__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Records the end date of the relevant employment period.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>