force-app/main/default/objects/Employment_History__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Records the start date of the relevant employment period.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>